--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 /* Your custom css code goes here */
-.container {
+.container_scroll {
     position: relative;
     width: 24px;
     height: 24px;
@@ -68,7 +68,7 @@
     margin-left: -30px;
     font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
     font-size: 12px;
-    color: #fff;
+    color: inherit;
     text-transform: uppercase;
     white-space: nowrap;
     opacity: .25;
