--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -73,3 +73,91 @@
         opacity: 1;
     }
 }
+
+.news-block {
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+
+.news-block:last-child {
+    margin-bottom: 0;
+}
+
+.news-block__heading {
+    font-weight: bold;
+    font-size: 1.2em;
+}
+
+.news-block:hover .news-block__heading {
+    color: #52B947;
+}
+.news__item-inner {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.news__item {
+    margin: 40px auto;
+}
+
+.news__item-img {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.news-item__body {
+    color: #3E4C5B;
+    margin-top: 20px;
+}
+
+.navigation {
+    margin: 20px 0;
+}
+
+.news-card__lable {
+    color: #1BB7CD;
+}
+
+.news-card__title {
+    font-size: 2em;
+}
+
+.news-card__additional {
+    color: #9AA8B6;
+}
+
+.news-card__img {
+    width: 100%;
+    height: 100%;
+    background-size: cover !important;
+    padding-top: 33.33333%;
+    -webkit-transition: all .2s;
+    transition: all .2s;
+}
+
+.news-card__img:hover {
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+.news-card__img-wrapper {
+    width: 100%;
+    display: block;
+    margin: 20px 0;
+    overflow: hidden;
+}
+
+.news-card__b {
+    margin-top: 15px;
+    color: #52B947;
+}
+
+.news-card__description {
+    color: #9AA8B6;
+}
+
+@media screen and (max-width: 992px) {
+    .news-card {
+        margin-bottom: 40px;
+    }
+}
